--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <title>Data Science Portfolio</title>
   <link rel="stylesheet" href="/styles/styles.css">
 </head>
@@ -73,37 +74,34 @@
           <div class="icon-container">
             <img class="link-img" src="/static/excel.png" alt="Excel" onclick="window.location.href='https://drive.google.com/file/d/1hL6kNkMjt5P9Y0g252DTgCsvWDEgcCXR/view?usp=drive_link';">
             <img class="link-img" src="/static/statistics.png" alt="Statistics" onclick="window.location.href='https://drive.google.com/file/d/1QM9c8asFaDgyH6kqVQ_wX3NCDc_X3MVB/view?usp=drive_link';">
-            <img class="link-img" src="/static/ml.png" alt="Machine Learning" onclick="window.location.href='index.html'">
             <img class="link-img" src="/static/sql.png" alt="SQL" onclick="window.location.href='https://drive.google.com/file/d/13QjpX5-LH5JJVSRH_0lmyOPAW0TWaW_V/view?usp=drive_link';">
+            <img class="link-img" src="/static/ml.png" alt="Machine Learning" onclick="window.location.href='index.html'">
           </div>
         </div>
       </div>
     </div>
   </div>
   <script src="/scripts/script.js"></script>
+  <!-- Responsive Redirect Script -->
   <script>
     let lastRedirectTime = 0;
   
     function checkScreenWidth() {
       const width = window.innerWidth;
-      const path = window.location.pathname;
       const now = Date.now();
   
-      // Avoid redirect loops
-      if (now - lastRedirectTime < 500) return;
+      if (now - lastRedirectTime < 1000) return;
   
-      if (width < 400 && !path.includes("mobile.html")) {
+      if (width < 1000) {  // Using common mobile breakpoint
         lastRedirectTime = now;
-        window.location.replace("mobile.html");
-      } else if (width >= 400 && path.includes("mobile.html")) {
-        lastRedirectTime = now;
-        window.location.replace("index.html");
+        window.location.href = "mobile.html";
       }
     }
   
-    window.addEventListener('load', checkScreenWidth);
-    window.addEventListener('resize', checkScreenWidth);
+    window.addEventListener("load", checkScreenWidth);
+    window.addEventListener("resize", checkScreenWidth);
   </script>
+  
   
   
   
