--- a/mobile.html
+++ b/mobile.html
@@ -41,11 +41,33 @@
       <img src="/static/excel.png" alt="Excel" onclick="window.location.href='https://drive.google.com/file/d/1hL6kNkMjt5P9Y0g252DTgCsvWDEgcCXR/view?usp=drive_link';">
       <img src="/static/statistics.png" alt="Statistics" onclick="window.location.href='https://drive.google.com/file/d/1QM9c8asFaDgyH6kqVQ_wX3NCDc_X3MVB/view?usp=drive_link';">
       <img src="/static/sql.png" alt="SQL" onclick="window.location.href='https://drive.google.com/file/d/13QjpX5-LH5JJVSRH_0lmyOPAW0TWaW_V/view?usp=drive_link';">
+      <img class="link-img" src="/static/ml.png" alt="Machine Learning" onclick="window.location.href='index.html'">
     </div>
   </section>
 
   <footer>
     <p>© 2025 Piyush Gala</p>
   </footer>
+
+  <!-- ✅ JS to redirect back to desktop version -->
+  <script>
+    let lastRedirectTime = 0;
+  
+    function checkScreenWidth() {
+      const width = window.innerWidth;
+      const now = Date.now();
+  
+      if (now - lastRedirectTime < 1000) return;
+  
+      if (width >= 1000) {  // Same breakpoint as desktop
+        lastRedirectTime = now;
+        window.location.href = "index.html";
+      }
+    }
+  
+    window.addEventListener("load", checkScreenWidth);
+    window.addEventListener("resize", checkScreenWidth);
+  </script>
+  
 </body>
 </html>
