--- a/mobile.html
+++ b/mobile.html
@@ -25,13 +25,28 @@
   </section>
 
   <section class="skills">
-    <h2>Skills</h2>
+    <h2>Skills & Technologies</h2>
+    <h3>Languages & Tools</h3>
     <ul>
       <li>Python</li>
       <li>SQL</li>
-      <li>Statistics</li>
       <li>Excel</li>
       <li>Machine Learning</li>
+    </ul>
+    <h3>Libraries</h3>
+    <ul>
+      <li>Pandas</li>
+      <li>NumPy</li>
+      <li>Matplotlib</li>
+      <li>Scikit-learn</li>
+    </ul>
+    <h3>Concepts</h3>
+    <ul>
+      <li>Statistics</li>
+      <li>Data Wrangling</li>
+      <li>Data Visualization</li>
+      <li>Data Analysis</li>
+      <li>A/B Testing</li>
     </ul>
   </section>
 
