--- a/mobile.html
+++ b/mobile.html
@@ -25,13 +25,15 @@
   </section>
 
   <section class="skills">
-    <h2>Skills & Technologies</h2>
+    <h1>Skills & Technologies</h1>
     <h3>Languages & Tools</h3>
     <ul>
       <li>Python</li>
       <li>SQL</li>
       <li>Excel</li>
       <li>Machine Learning</li>
+      <li>JavaScript(basic)</li>
+      <li>Java(basic)</li>
     </ul>
     <h3>Libraries</h3>
     <ul>
