--- a/mobile.html
+++ b/mobile.html
@@ -18,7 +18,7 @@
   </section>
 
   <section class="about">
-    <h2>About Me</h2>
+    <h1>About Me</h1>
     <p>
       I'm Piyush Gala, a data scientist passionate about using machine learning and statistics to solve real-world problems. I graduated from KES Shroff College and enjoy working on scalable data solutions.
     </p>
@@ -29,7 +29,7 @@
     <h3>Languages & Tools</h3>
     <ul>
       <li>Python</li>
-      <li>SQL</li>
+      <li>MYSQL</li>
       <li>Excel</li>
       <li>Machine Learning</li>
       <li>JavaScript(basic)</li>
@@ -53,7 +53,7 @@
   </section>
 
   <section class="certs">
-    <h2>Certifications</h2>
+    <h1>Certifications</h1>
     <div class="cert-icons">
       <img src="/static/excel.png" alt="Excel" onclick="window.location.href='https://drive.google.com/file/d/1hL6kNkMjt5P9Y0g252DTgCsvWDEgcCXR/view?usp=drive_link';">
       <img src="/static/statistics.png" alt="Statistics" onclick="window.location.href='https://drive.google.com/file/d/1QM9c8asFaDgyH6kqVQ_wX3NCDc_X3MVB/view?usp=drive_link';">
