--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
   
       if (width >= 1000) {  // Same breakpoint as desktop
         lastRedirectTime = now;
-        window.location.href = "index.html";
+        window.location.href = "index_desktop.html";
       }
     }
   
