--- a/index_desktop.html
+++ b/index_desktop.html
@@ -118,7 +118,7 @@
   
       if (width < 1000) {  // Using common mobile breakpoint
         lastRedirectTime = now;
-        window.location.href = "mobile.html";
+        window.location.href = "index.html";
       }
     }
   
