--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   <section class="about">
     <h1>About Me</h1>
     <p>
-      I'm Piyush Gala, a data scientist passionate about using machine learning and statistics to solve real-world problems. I graduated from KES Shroff College and enjoy working on scalable data solutions.
+      Hi, I am Piyush Gala! I have a strong background in Data Science and Machine Learning, with a passion for solving real-world problems using data-driven approaches. I have completed my graduation from KES Shroff College, and my interests include Machine Learning, Data Visualization, and building scalable data solutions. My goal is to leverage my skills to make a meaningful impact in the field of Data Science.
     </p>
   </section>
 
@@ -40,6 +40,7 @@
       <li>Pandas</li>
       <li>NumPy</li>
       <li>Matplotlib</li>
+      <li>Seaborn</li>
       <li>Scikit-learn</li>
     </ul>
     <h3>Concepts</h3>
