--- a/index_desktop.html
+++ b/index_desktop.html
@@ -56,7 +56,7 @@
       <div class="about-content">
         <div class="bio">
           <p>
-            Hi, I'm Piyush Gala! I have a strong background in data science and machine learning, with a passion for solving real-world problems using data-driven approaches. I have completed my graduation from KES Shroff College, and my interests include machine learning, data visualization, and building scalable data solutions. My goal is to leverage my skills to make a meaningful impact in the field of data science.
+            Hi, I am Piyush Gala! I have a strong background in Data Science and Machine Learning, with a passion for solving real-world problems using data-driven approaches. I have completed my graduation from KES Shroff College, and my interests include Machine Learning, Data Visualization, and building scalable data solutions. My goal is to leverage my skills to make a meaningful impact in the field of Data Science.
           </p>
         </div>
         
@@ -72,7 +72,7 @@
           <div class="skill-row">
             <span class="skill-label">Libraries</span>
             <span class="skill-arrow">&rarr;</span>
-            <span class="skill-list">NumPy, Pandas, Matplotlib, Scikit-learn</span>
+            <span class="skill-list">NumPy, Pandas, Matplotlib, Seaborn, Scikit-learn</span>
           </div>
 
           <div class="skill-row">
