--- a/index_desktop.html
+++ b/index_desktop.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <title>Data Science Portfolio</title>
-  <link rel="stylesheet" href="/styles/styles.css">
+  <link rel="stylesheet" href="/styles/index_desktop_styles.css">
   <script src="https://cdn.sheetjs.com/xlsx-latest/package/dist/xlsx.full.min.js"></script>
 </head>
 <body>
@@ -109,14 +109,11 @@
   <section class="projects-container" id="projects">
     <h1 class="projects-title">Projects</h1>
     <div class="project-cards" id="projectContainer"></div>
+    <div class="show-more-container" id="showMoreContainer"></div>
   </section>
   
-  
-  
-  
-  
-  
-  <script src="/scripts/script.js"></script>
+
+  <script src="/scripts/index_desktop_script.js"></script>
   <!-- Responsive Redirect Script -->
   <script>
     let lastRedirectTime = 0;
@@ -135,47 +132,6 @@
   
     window.addEventListener("load", checkScreenWidth);
     window.addEventListener("resize", checkScreenWidth);
-
-
-    async function loadExcelProjects() {
-      try {
-        const response = await fetch('/data/projects.xlsx');
-        const arrayBuffer = await response.arrayBuffer();
-
-        const workbook = XLSX.read(arrayBuffer, { type: 'array' });
-        const sheet = workbook.Sheets[workbook.SheetNames[0]];
-        const projects = XLSX.utils.sheet_to_json(sheet);
-
-        renderProjects(projects);
-      } catch (error) {
-        console.error("Error loading Excel file:", error);
-      }
-    }
-
-    function renderProjects(projects) {
-      const container = document.getElementById("projectContainer");
-      container.innerHTML = "";
-
-      projects.forEach(project => {
-        const card = document.createElement("div");
-        card.className = "project-card";
-
-        card.innerHTML = `
-          <div class="card-content">
-            <div class="project-img" style="background-image: url('${project.ImageURL}')"></div>
-            <h2>${project.Title}</h2>
-            <p class="project-desc">${project.Description}</p>
-          </div>
-          <a href="${project.GitHubLink}" target="_blank" class="overlay-text">GitHub Link</a>
-        `;
-
-
-        container.appendChild(card);
-      });
-    }
-
-    // Load projects when the page is loaded
-    window.addEventListener("DOMContentLoaded", loadExcelProjects);
   </script>
   
   
