Project section updated

--- a/all_projects_mobile.html
+++ b/all_projects_mobile.html
@@ -15,6 +15,9 @@
 
   <!-- All Projects Section -->
   <section class="projects-container" id="projects">
+    <button class="back-home-btn" onclick="window.location.href='index_mobile.html'">
+      Home
+    </button>
     <h1 class="projects-title">All Projects</h1>
     <div class="project-cards" id="projectContainer"></div>
   </section>
@@ -37,7 +40,7 @@
   
       if (width >= 1000) {  // Same breakpoint as desktop
         lastRedirectTime = now;
-        window.location.href = "index_desktop.html";
+        window.location.href = "all_projects_desktop.html";
       }
     }
   
