--- a/index_desktop.html
+++ b/index_desktop.html
@@ -99,7 +99,7 @@
           <img class="link-img" src="/static/excel.png" alt="Excel" onclick="window.location.href='https://drive.google.com/file/d/1hL6kNkMjt5P9Y0g252DTgCsvWDEgcCXR/view?usp=drive_link';">
           <img class="link-img" src="/static/statistics.png" alt="Statistics" onclick="window.location.href='https://drive.google.com/file/d/1QM9c8asFaDgyH6kqVQ_wX3NCDc_X3MVB/view?usp=drive_link';">
           <img class="link-img" src="/static/sql.png" alt="SQL" onclick="window.location.href='https://drive.google.com/file/d/13QjpX5-LH5JJVSRH_0lmyOPAW0TWaW_V/view?usp=drive_link';">
-          <img class="link-img" src="/static/ml.png" alt="Machine Learning" onclick="window.location.href='index.html'">
+          <img class="link-img" src="/static/ml.png" alt="Machine Learning" onclick="window.location.href='index_desktop.html'">
         </div>
       </div>
     </div>
@@ -126,7 +126,7 @@
   
       if (width < 1000) {  // Using common mobile breakpoint
         lastRedirectTime = now;
-        window.location.href = "index.html";
+        window.location.href = "index_mobile.html";
       }
     }
   
