--- a/all_projects_desktop.html
+++ b/all_projects_desktop.html
@@ -18,10 +18,10 @@
       </div>
       <nav class="navbar">
         <ul>
-          <li><a href="index.html#home">Home</a></li>
-          <li><a href="index.html#about">About</a></li>
-          <li><a href="index.html#projects">Projects</a></li>
-          <li><a href="index.html#contact">Contact</a></li>
+          <li><a href="index_desktop.html#home">Home</a></li>
+          <li><a href="index_desktop.html#about">About</a></li>
+          <li><a href="index_desktop.html#projects">Projects</a></li>
+          <li><a href="index_desktop.html#contact">Contact</a></li>
         </ul>
       </nav>
     </div>
