--- a/all_projects_mobile.html
+++ b/all_projects_mobile.html
@@ -15,7 +15,7 @@
 
   <!-- All Projects Section -->
   <section class="projects-container" id="projects">
-    <button class="back-home-btn" onclick="window.location.href='index_mobile.html'">
+    <button class="back-home-btn" onclick="window.location.href='index_.html'">
       Home
     </button>
     <h1 class="projects-title">All Projects</h1>
