--- a/index_desktop.html
+++ b/index_desktop.html
@@ -18,8 +18,9 @@
       <nav class="navbar">
         <ul>
           <li><a href="#home">Home</a></li>
-          <li><a href="#about">About</a></li>
+          <li><a href="#about-container">About</a></li>
           <li><a href="#projects">Projects</a></li>
+          <li><a href="#resume">Resume</a></li>
           <li><a href="#contact">Contact</a></li>
         </ul>
         
@@ -50,7 +51,7 @@
     </div>
   </div>
 
-  <div class="about-container">
+  <div class="about-container" id="about-container">
     <div class="about-card">
       <h1>About Me</h1>
       <div class="about-content">
@@ -126,7 +127,7 @@
   
       if (width < 1000) {  // Using common mobile breakpoint
         lastRedirectTime = now;
-        window.location.href = "index_mobile.html";
+        window.location.href = "index_.html";
       }
     }
   
