--- a/index_desktop.html
+++ b/index_desktop.html
@@ -92,14 +92,14 @@
     </div>
   </div>
 
-  <div class="about-container">
-    <div class="about-card">
+  <div class="certification-container">
+    <div class="certification-card">
       <div class="certifications">
-        <h2>Certifications & Achievements</h2>
+        <h1>Certifications & Achievements</h1>
         <div class="icon-container">
-          <img class="link-img" src="/static/excel.png" alt="Excel" onclick="window.location.href='https://drive.google.com/file/d/1hL6kNkMjt5P9Y0g252DTgCsvWDEgcCXR/view?usp=drive_link';">
-          <img class="link-img" src="/static/statistics.png" alt="Statistics" onclick="window.location.href='https://drive.google.com/file/d/1QM9c8asFaDgyH6kqVQ_wX3NCDc_X3MVB/view?usp=drive_link';">
-          <img class="link-img" src="/static/sql.png" alt="SQL" onclick="window.location.href='https://drive.google.com/file/d/13QjpX5-LH5JJVSRH_0lmyOPAW0TWaW_V/view?usp=drive_link';">
+          <img class="link-img" src="/static/excel.png" alt="Excel" onclick="window.open('https://drive.google.com/file/d/1hL6kNkMjt5P9Y0g252DTgCsvWDEgcCXR/view?usp=drive_link', '_blank');">
+          <img class="link-img" src="/static/sql.png" alt="SQL" onclick="window.open('https://drive.google.com/file/d/1QM9c8asFaDgyH6kqVQ_wX3NCDc_X3MVB/view?usp=drive_link', '_blank');">
+          <img class="link-img" src="/static/statistics.png" alt="Statistics" onclick="window.open('https://drive.google.com/file/d/13QjpX5-LH5JJVSRH_0lmyOPAW0TWaW_V/view?usp=drive_link', '_blank');">
           <img class="link-img" src="/static/ml.png" alt="Machine Learning" onclick="window.location.href='index_desktop.html'">
         </div>
       </div>
