--- a/index.html
+++ b/index.html
@@ -57,10 +57,10 @@
   <section class="certs">
     <h1>Certifications</h1>
     <div class="cert-icons">
-      <img src="/static/excel.png" alt="Excel" onclick="window.location.href='https://drive.google.com/file/d/1hL6kNkMjt5P9Y0g252DTgCsvWDEgcCXR/view?usp=drive_link';">
-      <img src="/static/statistics.png" alt="Statistics" onclick="window.location.href='https://drive.google.com/file/d/1QM9c8asFaDgyH6kqVQ_wX3NCDc_X3MVB/view?usp=drive_link';">
-      <img src="/static/sql.png" alt="SQL" onclick="window.location.href='https://drive.google.com/file/d/13QjpX5-LH5JJVSRH_0lmyOPAW0TWaW_V/view?usp=drive_link';">
-      <img class="link-img" src="/static/ml.png" alt="Machine Learning" onclick="window.location.href='index_.html'">
+      <img class="link-img" src="/static/excel.png" alt="Excel" onclick="window.open('https://drive.google.com/file/d/1hL6kNkMjt5P9Y0g252DTgCsvWDEgcCXR/view?usp=drive_link', '_blank');">
+          <img class="link-img" src="/static/sql.png" alt="SQL" onclick="window.open('https://drive.google.com/file/d/1QM9c8asFaDgyH6kqVQ_wX3NCDc_X3MVB/view?usp=drive_link', '_blank');">
+          <img class="link-img" src="/static/statistics.png" alt="Statistics" onclick="window.open('https://drive.google.com/file/d/13QjpX5-LH5JJVSRH_0lmyOPAW0TWaW_V/view?usp=drive_link', '_blank');">
+          <img class="link-img" src="/static/ml.png" alt="Machine Learning" onclick="window.location.href='index_desktop.html'">
     </div>
   </section>
 
