--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
       <img class="link-img" src="/static/excel.png" alt="Excel" onclick="window.open('https://drive.google.com/file/d/1hL6kNkMjt5P9Y0g252DTgCsvWDEgcCXR/view?usp=drive_link', '_blank');">
           <img class="link-img" src="/static/sql.png" alt="SQL" onclick="window.open('https://drive.google.com/file/d/1QM9c8asFaDgyH6kqVQ_wX3NCDc_X3MVB/view?usp=drive_link', '_blank');">
           <img class="link-img" src="/static/statistics.png" alt="Statistics" onclick="window.open('https://drive.google.com/file/d/13QjpX5-LH5JJVSRH_0lmyOPAW0TWaW_V/view?usp=drive_link', '_blank');">
-          <img class="link-img" src="/static/ml.png" alt="Machine Learning" onclick="window.location.href='index_desktop.html'">
+          <img class="link-img" src="/static/prompt.png" alt="Prompt Engineering" onclick="window.open('https://drive.google.com/file/d/1iJ_VFnqmJDtJONV6xzGD8m5kGIzlFP5B/view?usp=drive_link', '_blank');">
     </div>
   </section>
 
