--- a/index.html
+++ b/index.html
@@ -68,6 +68,17 @@
     <h1>Projects</h1>
     <div class="project-cards" id="projectContainer"></div>
   </section>
+
+  <!-- Resume Section -->
+  <section class="resume-container" id="resume">
+    <h1>Resume</h1>
+    <div class="resume-button-container">
+      <a href="/static/Resume_Piyush_Gala.pdf" download class="resume-download-button">
+        Download Resume
+        <img class="resume-img" src="/static/download.png" alt="Download Icon">
+      </a>
+    </div>
+  </section>
   
 
   <footer>
