--- a/index_desktop.html
+++ b/index_desktop.html
@@ -21,7 +21,7 @@
           <li><a href="#about">About</a></li>
           <li><a href="#projects">Projects</a></li>
           <li><a href="#resume">Resume</a></li>
-          <li><a href="#about">Contact</a></li>
+          <li><a href="#contact">Contact</a></li>
         </ul>
         
       </nav>
@@ -59,13 +59,6 @@
           <p>
             Hi, I am Piyush Gala! I have a strong background in Data Science and Machine Learning, with a passion for solving real-world problems using data-driven approaches. I have completed my graduation from KES Shroff College, and my interests include Machine Learning, Data Visualization, and building scalable data solutions. My goal is to leverage my skills to make a meaningful impact in the field of Data Science.
           </p>
-        </div>
-
-        <h2>Quick Links</h2>
-        <div class="quick-links">
-          <img class="quick-links-icon" src="/static/linkedin.png" alt="Linkedin" onclick="window.open('https://www.linkedin.com/in/piyush-gala-', '_blank');">
-          <img class="quick-links-icon" src="/static/github.png" alt="Github" onclick="window.open('https://github.com/Piyushgala03', '_blank');">
-          <img class="quick-links-icon" src="/static/gmail.png" alt="Gmail" onclick="copyEmailToClipboard();">
         </div>
         
         <div class="skills">
@@ -129,6 +122,27 @@
         Download Resume
         <img class="resume-img" src="/static/download.png" alt="Download Icon">
       </a>
+    </div>
+  </section>
+
+  <!-- Contact Section -->
+  <section class="contact-container" id="contact">
+    <h1 class="contact-title">Contact Me</h1>
+    <div class="contact-button-container">
+      <div class="quick-links">
+        <div class="tooltip-wrapper" data-tooltip="LinkedIn Profile">
+          <img class="quick-links-icon" src="/static/linkedin.png" alt="Linkedin" onclick="window.open('https://www.linkedin.com/in/piyush-gala-', '_blank');">
+        </div>
+        <div class="tooltip-wrapper" data-tooltip="GitHub Profile">
+          <img class="quick-links-icon" src="/static/github.png" alt="Github" onclick="window.open('https://github.com/Piyushgala03', '_blank');">
+        </div>
+        <div class="tooltip-wrapper" data-tooltip="Copy Email">
+          <img class="quick-links-icon" src="/static/gmail.png" alt="Gmail" onclick="copyEmailToClipboard();">
+        </div>
+        <div class="tooltip-wrapper" data-tooltip="Copy Phone Number">
+          <img class="quick-links-icon" src="/static/number.png" alt="Phone" onclick="copyContactToClipboard();">
+        </div>
+      </div>          
     </div>
   </section>
 
