--- a/index_desktop.html
+++ b/index_desktop.html
@@ -122,6 +122,10 @@
         Download Resume
         <img class="resume-img" src="/static/download.png" alt="Download Icon">
       </a>
+      <a class="resume-download-button", onclick="window.open('https://drive.google.com/file/d/1dKA3SSsYI5SjMqxd9w8Oi9R59kIlWZ5F/view?usp=sharing', '_blank')">
+        View Resume
+        <img class="resume-img" src="/static/view.png" alt="Download Icon">
+      </a>
     </div>
   </section>
 
