contact_me_mobile

--- a/index.html
+++ b/index.html
@@ -77,6 +77,31 @@
         Download Resume
         <img class="resume-img" src="/static/download.png" alt="Download Icon">
       </a>
+      <a class="resume-download-button", onclick="window.open('https://drive.google.com/file/d/1dKA3SSsYI5SjMqxd9w8Oi9R59kIlWZ5F/view?usp=sharing', '_blank')">
+        View Resume
+        <img class="resume-img" src="/static/view.png" alt="Download Icon">
+      </a>
+    </div>
+  </section>
+
+  <!-- Contact Section -->
+  <section class="contact-container" id="contact">
+    <h1 class="contact-title">Contact Me</h1>
+    <div class="contact-button-container">
+      <div class="quick-links">
+        <div class="tooltip-wrapper" data-tooltip="LinkedIn Profile">
+          <img class="quick-links-icon" src="/static/linkedin.png" alt="Linkedin" onclick="window.open('https://www.linkedin.com/in/piyush-gala-', '_blank');">
+        </div>
+        <div class="tooltip-wrapper" data-tooltip="GitHub Profile">
+          <img class="quick-links-icon" src="/static/github.png" alt="Github" onclick="window.open('https://github.com/Piyushgala03', '_blank');">
+        </div>
+        <div class="tooltip-wrapper" data-tooltip="Copy Email">
+          <img class="quick-links-icon" src="/static/gmail.png" alt="Gmail" onclick="copyEmailToClipboard();">
+        </div>
+        <div class="tooltip-wrapper" data-tooltip="Copy Phone Number">
+          <img class="quick-links-icon" src="/static/number.png" alt="Phone" onclick="copyContactToClipboard();">
+        </div>
+      </div>          
     </div>
   </section>
   
