--- a/index.html
+++ b/index.html
@@ -55,7 +55,10 @@
   </section>
 
   <section class="certs">
-    <h1>Certifications</h1>
+    <h1>Certifications & Achievements</h1>
+    <div class="achievements-list">
+          <a onclick="window.open('https://www.hackerrank.com/profile/pythongala2003', '_blank');"><p>5⭐ SQL HackerRank</p></a>
+        </div>
     <div class="cert-icons">
       <img class="link-img" src="/static/excel.png" alt="Excel" onclick="window.open('https://drive.google.com/file/d/1hL6kNkMjt5P9Y0g252DTgCsvWDEgcCXR/view?usp=drive_link', '_blank');">
           <img class="link-img" src="/static/sql.png" alt="SQL" onclick="window.open('https://drive.google.com/file/d/1QM9c8asFaDgyH6kqVQ_wX3NCDc_X3MVB/view?usp=drive_link', '_blank');">
