--- a/index_desktop.html
+++ b/index_desktop.html
@@ -97,6 +97,9 @@
     <div class="certification-card">
       <div class="certifications">
         <h1>Certifications & Achievements</h1>
+        <div class="achievements-list">
+          <a onclick="window.open('https://www.hackerrank.com/profile/pythongala2003', '_blank');"><p>5⭐ SQL HackerRank</p></a>
+        </div>
         <div class="icon-container">
           <img class="link-img" src="/static/excel.png" alt="Excel" onclick="window.open('https://drive.google.com/file/d/1hL6kNkMjt5P9Y0g252DTgCsvWDEgcCXR/view?usp=drive_link', '_blank');">
           <img class="link-img" src="/static/sql.png" alt="SQL" onclick="window.open('https://drive.google.com/file/d/1QM9c8asFaDgyH6kqVQ_wX3NCDc_X3MVB/view?usp=drive_link', '_blank');">
