--- a/index_desktop.html
+++ b/index_desktop.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <title>Data Science Portfolio</title>
+  <link rel="icon" type="image/png" href="static/profile.ico">
   <link rel="stylesheet" href="/styles/index_desktop_styles.css">
   <script src="https://cdn.sheetjs.com/xlsx-latest/package/dist/xlsx.full.min.js"></script>
 </head>
