--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Piyush Gala | Data Scientist</title>
+  <link rel="icon" type="image/png" href="static/profile.ico">
   <link rel="stylesheet" href="/styles/mobile.css">
   <script src="https://cdn.sheetjs.com/xlsx-latest/package/dist/xlsx.full.min.js"></script>
 </head>
