--- a/index_desktop.html
+++ b/index_desktop.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-  <title>Data Science Portfolio</title>
+  <title>Portfolio</title>
   <link rel="icon" type="image/png" href="static/profile.ico">
   <link rel="stylesheet" href="/styles/index_desktop_styles.css">
   <script src="https://cdn.sheetjs.com/xlsx-latest/package/dist/xlsx.full.min.js"></script>
@@ -14,7 +14,7 @@
     <div class="container">
       <div class="logo">
         <h1>Piyush Gala</h1>
-        <p>Data Scientist | Turning Data into Insights</p>
+        <p>Junior SWE | Turning Manual Effort into Smart Execution</p>
       </div>
       <nav class="navbar">
         <ul>
@@ -58,7 +58,7 @@
       <div class="about-content">
         <div class="bio">
           <p>
-            Hi, I am Piyush Gala! I have a strong background in Data Science and Machine Learning, with a passion for solving real-world problems using data-driven approaches. I have completed my graduation from KES Shroff College, and my interests include Machine Learning, Data Visualization, and building scalable data solutions. My goal is to leverage my skills to make a meaningful impact in the field of Data Science.
+            Hi, I am Piyush Gala! B.Sc.IT Graduate - 2025, Now working as an Automation Engineer. Focusing on building efficient and scalable automation solutions that optimize repetitive tasks and reduce manual efforts.
           </p>
         </div>
         
@@ -78,18 +78,18 @@
           </div>
 
           <div class="skill-row">
+            <span class="skill-label">Framework</span>
+            <span class="skill-arrow">&rarr;</span>
+            <span class="skill-list">Frappe</span>
+          </div>
+
+          <div class="skill-row">
             <span class="skill-label">Concepts</span>
             <span class="skill-arrow">&rarr;</span>
             <span class="skill-list">Statistics, Data Wrangling, Data Visualization, Data Analysis, A/B Testing</span>
           </div>
 
-          <div class="skill-row">
-            <span class="skill-label">Soft Skills</span>
-            <span class="skill-arrow">&rarr;</span>
-            <span class="skill-list">Business Communication, Recommendation Design</span>
-          </div>
         </div>
-        
       </div>
     </div>
   </div>
